@@ -41,6 +41,7 @@ Improvements::
 
 Bug Fixes::
 
+* don't warn about missing character in fallback font when inline image is advanced to next page (#2492)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
